@@ -63,7 +63,6 @@ identities = true
 enrichment = true
 panels = true
 
-
 [git]
 raw_index = git_grimoirelab-raw
 enriched_index = git_grimoirelab
@@ -73,5 +72,3 @@ raw_index = github_grimoirelab-raw
 enriched_index = github_grimoirelab
 api-token = XXX
 sleep-for-rate = true
-#fetch-cache = true
-# from-date = 2016-01-01
