@@ -1,16 +1,15 @@
-SORTINGHAT='641dabd71d4f4a23547592a10096240343268bd1'
-GRIMOIREELK='7af1dd9a910bea61230490d6785ef522ca1626da'
-PERCEVAL='3ae60d21f219f36db4a1aa5606f5fcd1d27d9690'
+# elasticgirl.27.1
+SORTINGHAT='b2493bb73eddcc92ac6bb73a98c13c947715560d'
+GRIMOIREELK='1d7aa769faa5b806f1518e914ccc4076583f89d2'
+PERCEVAL='7dae0ea19c6a4082122b6344b137ab8539e2eb21'
 KIBITER='f7bf173cb1d79418b9909d877adfb998ce7b52da'
-GRIMOIRELAB_GITHUB_IO='2f71c036020f6873efdd079f4ec2b5f26584cb2b'
-ARTHUR='5b225e7865d13ffe790f46c51a97279682d78d4a'
+GRIMOIRELAB_GITHUB_IO='0d3af89aacd2bade533a21db359243c5074dd07a'
+ARTHUR='3efff3311b52222b7d06bf63ce97f8a42572bc06'
 USE_CASES='31ea49ecc28f3e27aa29fddb0e01b7f475069b6a'
-PANELS='7733cbb6f1d7899cc961291bcb588b3aeff954ad'
-MORDRED='ee4e55f1560f916b8c2b4dbc4ff0fb78639f8278'
-TRAINING='9df30c3ec955387a423f261bb141f74133bf7ff7'
-PERCEVAL_MOZILLA='8fa887fa6bc7593f632518312de35370b1b5b931'
+PANELS='7fba3ccdbfe08d4044debf6793c1888df781f16e'
+MORDRED='555073d798656258c11b202161a9427758efb53e'
+PERCEVAL_MOZILLA='a7a3e2d79613e6ef5f36a34129b38fae0c7acae8'
 PERCEVAL_PUPPET='9c0d4c72a0e9b3c7c1e3295f72ebe70c5c874084'
-REPORTS='4ad4f7c9d8cd5eb728a95c3a358d8aa339102c75'
-GRIMOIRELAB_TOOLKIT='95d271af32744eb38f73df592f2e0dc5ea97683b'
+REPORTS='b7efe56cb9281a14735a1367490ef2ac6901ac46'
+GRIMOIRELAB_TOOLKIT='49da2a7efd4605f8ca71b3cf283e9d62c3f02647'
 PERCEVAL_OPNFV='0bec845df7e17965892dfb1181da0ab1c77168dc'
-GRIMOIRELAB='a8d50b5702a0a61110def54ffb14ffc9e7e158dc'
