@@ -1,3 +1,5 @@
+GRIMOIRELAB_REL='elasticgirl.27.1'
+
 SORTINGHAT='b2493bb73eddcc92ac6bb73a98c13c947715560d'
 GRIMOIREELK='1d7aa769faa5b806f1518e914ccc4076583f89d2'
 PERCEVAL='7dae0ea19c6a4082122b6344b137ab8539e2eb21'
